; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_clnt.c_call_bind.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_clnt.c_call_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_task = type { i32, i32, %struct.rpc_xprt* }
%struct.rpc_xprt = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 (%struct.rpc_task*)* }

@call_connect = common dso_local global i32 0, align 4
@call_bind_status = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_task*)* @call_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @call_bind(%struct.rpc_task* %0) #0 {
  %2 = alloca %struct.rpc_task*, align 8
  %3 = alloca %struct.rpc_xprt*, align 8
  store %struct.rpc_task* %0, %struct.rpc_task** %2, align 8
  %4 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %5 = getelementptr inbounds %struct.rpc_task, %struct.rpc_task* %4, i32 0, i32 2
  %6 = load %struct.rpc_xprt*, %struct.rpc_xprt** %5, align 8
  store %struct.rpc_xprt* %6, %struct.rpc_xprt** %3, align 8
  %7 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %8 = call i32 @dprint_status(%struct.rpc_task* %7)
  %9 = load i32, i32* @call_connect, align 4
  %10 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %11 = getelementptr inbounds %struct.rpc_task, %struct.rpc_task* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.rpc_xprt*, %struct.rpc_xprt** %3, align 8
  %13 = call i32 @xprt_bound(%struct.rpc_xprt* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %31, label %15

15:                                               ; preds = %1
  %16 = load i32, i32* @call_bind_status, align 4
  %17 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %18 = getelementptr inbounds %struct.rpc_task, %struct.rpc_task* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.rpc_xprt*, %struct.rpc_xprt** %3, align 8
  %20 = getelementptr inbounds %struct.rpc_xprt, %struct.rpc_xprt* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %23 = getelementptr inbounds %struct.rpc_task, %struct.rpc_task* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.rpc_xprt*, %struct.rpc_xprt** %3, align 8
  %25 = getelementptr inbounds %struct.rpc_xprt, %struct.rpc_xprt* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32 (%struct.rpc_task*)*, i32 (%struct.rpc_task*)** %27, align 8
  %29 = load %struct.rpc_task*, %struct.rpc_task** %2, align 8
  %30 = call i32 %28(%struct.rpc_task* %29)
  br label %31

31:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @dprint_status(%struct.rpc_task*) #1

declare dso_local i32 @xprt_bound(%struct.rpc_xprt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
